--- a/build.xml
+++ b/build.xml
@@ -7,9 +7,9 @@
 
 	<!-- Delete files which were used in previous build -->
 	<target name="clean">
-		<delete file="${build.dir.development}\forge\mcp\src\minecraft\mcmod.info" />
-		<delete dir="${build.dir.development}\forge\mcp\src\minecraft\com\PlayPrey" />
-		<delete dir="${build.dir.development}\forge\mcp\reobf\minecraft" />
+		<delete file="C:\Users\PlayPrey\forge\mcp\src\minecraft\mcmod.info" />
+		<delete dir="C:\Users\PlayPrey\forge\mcp\src\minecraft\com\PlayPrey" />
+		<delete dir="C:\Users\PlayPrey\forge\mcp\reobf\minecraft" />
 	</target>
 
 	<!-- Increment build number -->
@@ -21,26 +21,26 @@
 
 	<!-- Copy your project to MCP-->
 	<target name="prep">
-		<copy todir="${build.dir.development}\forge\mcp\src\minecraft">
-			<fileset dir="${build.dir.development}\source\AchieExtre\AchieExtre_common" />
+		<copy todir="C:\Users\PlayPrey\forge\mcp\src\minecraft">
+			<fileset dir="C:\Users\PlayPrey\Dropbox\Minecraft Modding\AchievementExtreme\AchieExtre_common" />
 		</copy>
 	</target>
 
 	<!-- Recompile and Reobfuscate your project inside /MCP -->
 	<target name="recompile">
-		<exec dir="${build.dir.development}\forge\mcp" executable="cmd" osfamily="windows">
+		<exec dir="C:\Users\PlayPrey\forge\mcp" executable="cmd" osfamily="windows">
 			<arg line="/c recompile.bat" />
 		</exec>
-		<exec dir="${build.dir.development}\forge\mcp" executable="bash" osfamily="unix">
+		<exec dir="C:\Users\PlayPrey\forge\mcp" executable="bash" osfamily="unix">
 			<arg line="recompile.sh" />
 		</exec>
 	</target>
 
 	<target name="reobfuscate">
-		<exec dir="${build.dir.development}\forge\mcp" executable="cmd" osfamily="windows">
+		<exec dir="C:\Users\PlayPrey\forge\mcp" executable="cmd" osfamily="windows">
 			<arg line="/c reobfuscate_srg.bat" />
 		</exec>
-		<exec dir="${build.dir.development}\forge\mcp" executable="bash" osfamily="unix">
+		<exec dir="C:\Users\PlayPrey\forge\mcp" executable="bash" osfamily="unix">
 			<arg line="reobfuscate_srg.sh" />
 		</exec>
 	</target>
@@ -58,9 +58,9 @@
 		<!-- Build the jar -->
 		<mkdir dir="${build.dir.release}\${build.release.minecraft.version}\${build.release.mod.version}" />
 		<jar destfile="${build.dir.release}\${build.release.minecraft.version}\${build.release.mod.version}\AchievExtrem-${build.release.mod.version}-${build_number.build_number}.jar">
-			<fileset dir="${build.dir.development}\forge\mcp\src\minecraft\" includes="mcmod.info" />
-			<fileset dir="${build.dir.development}\forge\mcp\reobf\minecraft" />
-			<fileset dir="${build.dir.development}\source\AchieExtre\resources" excludes="**/xcf/**" />
+			<fileset dir="C:\Users\PlayPrey\forge\mcp\src\minecraft\" includes="mcmod.info" />
+			<fileset dir="C:\Users\PlayPrey\forge\mcp\reobf\minecraft" />
+			<!-- <fileset dir="${build.dir.development}\source\AchieExtre\resources" excludes="**/xcf/**" /> -->
 		</jar>
 
 		<!-- Clean up the MCP source now that we are done -->
